# agentic_ai_sdk

./: main.py  pyproject.toml
.devcontainer/: devcontainer.json
AppointmentBot/: app.py  main.py  pyproject.toml
DevGuide/: .env  main.py  pyproject.toml  requirements.txt
MEALMentor/: .env  agent_utils.py  main.py  pyproject.toml
MEALMentor/pages/: Meal_Mentor.py  Study_Assistant.py  fitness_Coach.py
QuizPrepAgenticAI/: .env  00envsetup.txt  01day.py  02addchainlit.py  main.py  pyproject.toml
Rishtaapp/: .env  main.py  pyproject.toml
agentic_ai_class/class01_agent/hello_agent/: .env  hello.py  pyproject.toml  requirements.txt
agentic_ai_class/class01_agent/javbot/: main.py  pyproject.toml  requirements.txt
agentic_ai_class/class_assignments/multi_agents01/: requirements.txt
career_guider_agent/: app.py  main.py  pyproject.toml
career_guider_agent/agent/: career_agent.py
career_guider_agent/logic/: prompt_builder.py  question_flow.py
career_guider_agent/utils/: session.py
chatsss/: .env  main.py
docPrep/: .env  02Agents.py  03session.py  04session.py  05result.py  main.py
hello-chainlit/: .env  pyproject.toml
hello-op-ag/: pyproject.toml
hello1/: pyproject.toml
hello1/src/hello1/: __init__.py  hello.py
javAgent/: .gitignore  main.py  pyproject.toml
multiagent02/: .env  main.py  pyproject.toml
multiagent02/.chainlit/: config.toml
multiagent02/public/: loader.css  loader.js
pythonAgenticaiquizprep/pythonForAgenticAI/: async.py  summraizer_tool.py
sess_agent/: .env  main.py  pyproject.toml
test/: main.py  pyproject.toml
(+6 files in other folders)
