[project]
name = "hello1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "javeri-a", email = "javeriaqureshi746@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.400",
    "openai-agents>=0.0.8",
]

[project.scripts]
hello1 = "hello1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
